# NAN-itself

./: .gitignore  README.md  pyproject.toml
src/nan_agent/: event_bus.py  exceptions.py  lifecycle.py  main.py  orchestrator.py
src/nan_agent/action_room/: __init__.py  action.py  code_executor.py  filesystem.py  gui_control.py  interface.py  mcp_adapter.py  perception.py  registry.py  screen_perception.py  simulation.py  skill_loader.py  skill_trees.py  sub_agent_dispatcher.py  web_search.py
src/nan_agent/cli/: __init__.py  commands.py  dashboard.py  display.py  repl.py  session.py
src/nan_agent/config/: defaults.yaml  loader.py
src/nan_agent/hard_memory/: __init__.py  common.py  dream_engine.py  interface.py  memory.py  multimodal.py  retrieve.py  skill_store.py  store.py  temporal_graph.py
src/nan_agent/inference/: __init__.py  dmn.py  dot_engine.py  draw_of_thought.py  engine.py  graph.py  metacognition.py  node_pool.py  reasoning_loop.py  scheduler.py  tools.py
src/nan_agent/logging/: __init__.py  logger.py
src/nan_agent/model/: cognition.py  ollama_provider.py  peft_manager.py  provider.py  types.py
src/nan_agent/self_value/: __init__.py  circadian.py  coupling.py  dynamics.py  emotional_descriptor.py  evaluator.py  hexaco.py  hexaco_descriptor.py  interface.py  mbti_map.py  narrative.py  neuromodulators.py  values.py
src/nan_agent/soft_memory/: __init__.py  data_gen.py  hotswap.py  interface.py  merge.py  screener.py  trainer.py  triggers.py
src/nan_agent/storage/: __init__.py  base.py  blob_store.py  graph_store.py  state_store.py  (+1 more)
(+4 files in other folders)
