[project]
name = "nan-agent"
version = "0.1.0"
description = "NAN-Agent: A self-evolving AI agent with cognition, memory, personality, and self-awareness"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "ddgs>=9.0",
    "rich>=13.0",
    "PyYAML>=6.0",
    "numpy>=1.26",
    "structlog>=24.0",
    "chromadb>=0.5",
    "networkx>=3.3",
    "aiosqlite>=0.20",
    "edge-tts>=7.2",
]

[project.optional-dependencies]
perception = [
    "Pillow>=10.0",
    "opencv-python>=4.9",
    "faster-whisper>=1.0",
    "sounddevice>=0.5",
    "ultralytics>=8.0",
    "torch>=2.3",
    "transformers>=4.40",
]
soft_memory = [
    "peft>=0.11",
    "datasets>=2.18",
]

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
